# crisp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  fixture.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
circuits/: README.md  aggregator.circom  gen_solvency.circom  input_gen.json  input_solvency.json  solvency.circom
contracts/crisp_oracle/: Cargo.toml  README.md
contracts/crisp_oracle/src/: batch_fixture.rs  lib.rs  oracle_fixture.rs  test.rs  zk_fixture.rs
contracts/crisp_oracle/test_snapshots/test/: test_add_provider_and_storage.1.json  test_attest_reserves_v2_with_registered_oracle.1.json  test_batch_attestation_v3_duplicate_batch.1.json  test_batch_attestation_v3_single_issuer_rejected.1.json  test_batch_attestation_v3_success.1.json  test_batch_attestation_v3_system_insolvent.1.json  test_empty_proof_fails.1.json  test_initialize_and_attestation.1.json  test_insolvent_rejected.1.json  test_invalid_ic_len_rejected.1.json  test_invalid_proof_length_rejected.1.json  test_real_solvency_attestation.1.json  test_replay_protection_panics.1.json  test_uninitialized_vk_rejected.1.json  test_verify_oracle_sig_tampered_fails.1.json
db/: schema.sql
docs/: AUDIT_REPORT.md  DX-REPORT.md
e2e/: demo-mode.spec.ts  responsive.spec.ts  solvency-flow.spec.ts
public/: mock_db.json  pitch.html
scripts/: bench.py  build-bn254.sh  check_submission_readiness.py  gen-proof-fixture.mjs  init-oracle.mjs  prove-and-verify-batch.mjs  prove-and-verify-oracle.mjs  prove-and-verify.mjs  record-crisp.mjs  (+2 more)
(+25 files in other folders)
