[package]
name = "crisp-oracle"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["hazmat-crypto"] }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
